--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 
-body { /* Visual */ background: lightgrey;}
+body { text-align: center;
+    /* Visual */ background: lightgrey;}
 
 #image-holder {
 
